--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "dependencies": {
     "@react-three/fiber": "^8.17.8",
     "@types/three": "^0.169.0",
-    "next": "14.2.13",
+    "next": "^14.2.24",
     "react": "^18",
     "react-dom": "^18",
     "three": "^0.169.0"
